--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ font-family: Verdana, Arial, "Trebuchet MS", Sans-Serif, Georgia, Courier, "Time
 font-size: 14px; 
 background: #ffffff;
 color: #333; 
-margin:0; 
+Margin:5px; 
 padding:0px;
 line-height: 135%;
 }
@@ -137,7 +137,8 @@ margin: 20px 0;
 #sidebar {
 float: right;
 width: 210px;
-margin: 20px 0;
+margin: 20px 0px;
+padding-left: 5px;
 border-left: 1px solid #e2e2e2;
 }
 
