--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@
 
 body {
 font-family: Verdana, Arial, "Trebuchet MS", Sans-Serif, Georgia, Courier, "Times New Roman", Serif;
-font-size: 14px; 
+font-size: 14px;
 background: #ffffff;
-color: #333; 
-Margin:10px; 
+color: #333;
+Margin:10px;
 padding:0px;
 line-height: 135%;
 }
@@ -22,14 +22,14 @@ line-height: 135%;
 p
 {
 padding:0.2cm 0cm 0.2cm 0cm;
-} 
+}
 
 
 a { color: #336699; text-decoration: none; }
 a:hover { text-decoration: none; color : #880000; }
 
-img { border:none; padding: 0; vertical-align:middle;} 
-img a {border:none; } 
+img { border:none; padding: 0; vertical-align:middle;}
+img a {border:none; }
 
 ul { list-style-type: none; }
 
@@ -43,12 +43,12 @@ ul { list-style-type: none; }
 }
 
 
-#header { 
+#header {
 height: 220px;
 position: relative;
 }
 
-#header h1{	
+#header h1{
 padding-top: 0px;
 padding-bottom: 5px;
 font-size: 30px;
@@ -56,7 +56,7 @@ font-weight: 400;
 }
 
 #header h2{
-font-weight: 100;	
+font-weight: 100;
 margin-top: 10px;
 font-size: 18px;
 }
@@ -71,11 +71,11 @@ font-size: 18px;
 	padding: 15px;
 	border-radius:5px;
 	margin-top: 12px;
-	font-size: 14px;
+	font-size: 15px;
 }
 
 #header h1 a {
-color: #336699; 
+color: #336699;
 }
 
 #header h1 a:hover {
@@ -147,7 +147,7 @@ margin: 0 0;
 font-weight: 100;
 font-size: 12px;
 text-align: center;
-color: #666;	
+color: #666;
 height: 300px;
 line-height: 50px;
 }
@@ -158,24 +158,25 @@ line-height: 50px;
 
 
 #content h1 {
-color: #666;
-padding-top: 25px;
-padding-bottom: 10px;
 font-size: 20px;
 font-weight: 600;
+color:rgb(247, 148, 29)	;
+padding-top: 16px;
+padding-bottom: 16px;
 }
 
 #content h2 {
+font-size: 18px;
 font-weight: 100;
-font-size: 19px;
-margin: 16px 0px 16px 0px; padding: 0 0 0px; 
 color:rgb(247, 148, 29)	;
+margin: 16px 0px 16px 0px;
+padding: 0 0 0px;
 }
 
 #content h3 {
 font-weight: 100;
 font-size: 14px;
-margin: 0px 0; padding: 3px 10px 3px 0px; 
+margin: 0px 0; padding: 3px 10px 3px 0px;
 color: #666;
 }
 
@@ -205,16 +206,30 @@ margin: 0px;
 padding: 0 10px 10px 0;
 }
 
+#content ol {
+color: #555555;
+margin: 0px;
+padding: 10px 20px ;
+}
+
+#content ol li {
+padding: 3px 0px;
+}
+
 #content ul {
 color: #555555;
-padding: 10px 10px;
+margin: 0px;
+padding: 10px 20px ;
 }
+
+
 #content ul li {
-list-style-type: none;
+list-style-type: square;
+padding: 3px 0px;
 }
 
 #sidebar ul {
-    list-style-type: none; 
+    list-style-type: none;
 }
 
 #sidebar p {
@@ -225,19 +240,19 @@ list-style-type: none;
 #sidebar h2 {
     height: 40px;
     line-height: 40px;
-    margin: 0; padding: 0; 
+    margin: 0; padding: 0;
     text-align:center;
 
 font-weight: 100;
 font-size: 14px;
-margin: 0px 0; 
+margin: 0px 0;
 color: #666;
 }
 
 #sidebar h6 {
 font-weight: 100;
 font-size: 10px;
-margin: 0px 0; 
+margin: 0px 0;
 color: #666;
 }
 
@@ -271,7 +286,7 @@ padding: 10px 0 5px 20px;
 	border: 2px solid #e2e2e2;
 	border-bottom: 2px solid #fff;
 	margin-bottom: -2px;
-	color:rgb(247, 148, 29) ;	
+	color:rgb(247, 148, 29) ;
 }
 
 .menu a:hover{
@@ -291,7 +306,7 @@ padding: 10px 0 5px 20px;
 
 .menu li,
 .menu {
-	padding: 0;		
+	padding: 0;
 	margin: 0;
 	list-style: none;
 }
